--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
 body{
-  @apply bg-primary;
+  @apply bg-white;
+  font-family: "Comfortaa", sans-serif;
 }
+.card__beneficios {
+  position: relative;
+  max-width: 400px;
+  background: white;
+  height: 300px;
+  margin-bottom: 30px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
+  color: #243c5a;
+}
+
+.card__beneficios h3 {
+  font-size: 1.5rem;
+ 
+  font-weight: bold;
+}
+
+.card__beneficios:hover {
+  top: -10px;
+  transition: all .5s ease-in;
+  background: #0097B2;
+  color:white !important;
+}
+
+
